rancher_setup/aws-cfn-rancher_k3s.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Deploy Rancher + K3S on a Debian 12 VM with SSM'

Parameters:
  BootstrapPassword:
    Type: String
    NoEcho: true
  FQDN:
    Type: String
    Default: 'sslip.io'
  ImageId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/debian/release/bookworm/latest/amd64

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags: [{Key: Name, Value: !Ref 'AWS::StackName'}]

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  InternetRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "Allow HTTP/HTTPS"
      GroupDescription: "Allow HTTP and HTTPS access"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      VpcId: !Ref VPC

  SSMInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles: [!Ref SSMInstanceRole]

  SSMInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: [ec2.amazonaws.com]
            Action: ["sts:AssumeRole"]
      ManagedPolicyArns: 
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore

  Debian12Instance:
    Type: AWS::EC2::Instance
    Properties:
      Tags: [{Key: Name, Value: !Ref 'AWS::StackName'}]
      InstanceType: r6a.xlarge
      ImageId: !Ref ImageId
      IamInstanceProfile: !Ref SSMInstanceProfile
      MetadataOptions:
          HttpTokens: required
          HttpEndpoint: enabled
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet: [!Ref SecurityGroup]
          SubnetId: !Ref Subnet
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 600
      UserData: !Base64
        Fn::Sub: |
          #!/bin/bash
          mkdir /tmp/ssm; cd /tmp/ssm
          wget https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/debian_amd64/amazon-ssm-agent.deb
          dpkg -i amazon-ssm-agent.deb; systemctl enable amazon-ssm-agent
          export DEBIAN_FRONTEND=noninteractive
          apt-get update -y && apt-get install -y git open-iscsi dnsutils
          curl -sL https://raw.githubusercontent.com/wagov-dtt/iac_templates/main/rancher_setup/rancher_k3s.py | python3 - ${FQDN} ${BootstrapPassword}

Outputs:
  InstanceId:
    Description: ID of the EC2 instance
    Value: !Ref Debian12Instance
  FQDN:
    Description: FQDN of the EC2 instance
    Value: !If 
      - UseCustomFQDN
      - !Sub '${FQDN}/dashboard/?setup=${BootstrapPassword}'
      - !Sub 
        - '${IP}.sslip.io/dashboard/?setup=${BootstrapPassword}'
        - IP: !GetAtt Debian12Instance.PublicIp

Conditions:
  UseCustomFQDN: !Not [!Equals [!Ref FQDN, 'sslip.io']]
